nav_top y maquetacion del nav y el logo

--- a/index.html
+++ b/index.html
@@ -11,6 +11,67 @@
 
 <body>
 
+    <div class="wrapper">
+        <header>
+            <div class="nav_top">
+                <div class="container">
+                    <div>
+                        <a href="mailto:rover@gmail.com" title="rover@gmail.com">
+                            <i class="fa-solid fa-envelope"></i>
+                            <span>rover@gmail.com</span>
+                        </a>
+                    </div>
+                    <div>
+                        <a href="916456001" title="91 645 60 01">
+                            <i class="fa-solid fa-phone-flip"></i>
+                            <span>91 645 60 01</span>
+                        </a>
+                    </div>
+                    <div>
+                        <a href="fa-solid fa-shopping-cart" title="Carrito">
+                            <i class="fa-solid fa-shopping-cart"></i>
+                            <span>carrito</span>
+                        </a>
+                    </div>
+                    <div>
+                        <a href="fa-solid fa-user-circle" title="Login">
+                            <i class="fa-solid fa-user-circle"></i>
+                            <span>login</span>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <nav>
+                <div class="container">
+                    <figure class="logo">
+                        <a href="index.html">
+                            <img src="./images/logo.jpg" alt="Rovers">
+                        </a>
+                    </figure>
+                    <div class="hamburguesa">
+                        <div class="hamburguesa">
+                            <div></div>
+                            <div></div>
+                            <div></div>
+                        </div>
+
+                    </div>
+                    <ul class="menu">
+                        <li><a class="activo" href="index.html">Home</a></li>
+                        <li><a href="menu.html">Menu</a></li>
+                        <li><a href="blog.html">Blog</a></li>
+                        <li><a href="equipo.html">Equipo</a></li>
+                    </ul>
+
+                </div>
+            </nav>
+        </header>
+        <div class="hero"></div>
+        <main></main>
+        <footer></footer>
+
+    </div>
+
 </body>
 
 </html>
