header responsive finish

--- a/index.html
+++ b/index.html
@@ -68,7 +68,9 @@
         </header>
         <div class="hero"></div>
         <main></main>
-        <footer></footer>
+        <footer>
+
+        </footer>
 
     </div>
 
