--- a/plantilla.html
+++ b/plantilla.html
@@ -66,6 +66,7 @@
                 </div>
             </nav>
         </header>
+        <div class="hero"></div>
         <main></main>
         <footer>
             <div class="container"></div>
