--- a/index.html
+++ b/index.html
@@ -93,7 +93,74 @@
                 </ul>
             </div>
         </div>
-        <main></main>
+        <main>
+            <section id="ourservices">
+                <div class="container">
+                    <h2>Our <span>Services</span></h2>
+                    <div class="underline">
+                        <hr noshade="noshade">
+                        <span>X</span>
+                    </div>
+                    <div class="grid">
+                        <article>
+                            <div>
+                                <i class="fa-solid fa-cogs"></i>
+                            </div>
+                            <h3>1. Carne 100% natural</h3>
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eligendi cum natus consequuntur
+                                possimus rerum molestias totam, praesentium ea. Molestias, totam?</p>
+                            <a href="" class="enlace">
+                                Leer mas
+                                <i class="fa-solid fa-long-arrow-alt-right"></i>
+
+                            </a>
+                        </article>
+                        <article>
+                            <div>
+                                <i class="fa-solid fa-truck"></i>
+                            </div>
+                            <h3>2. Cocina Moderna</h3>
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eligendi cum natus consequuntur
+                                possimus rerum molestias totam, praesentium ea. Molestias, totam?</p>
+                            <a href="" class="enlace">
+                                Leer mas
+                                <i class="fa-solid fa-long-arrow-alt-right"></i>
+
+                            </a>
+                        </article>
+                        <article>
+                            <div>
+                                <i class="fa-solid fa-heart"></i>
+                            </div>
+                            <h3>3. Servicio impecable</h3>
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eligendi cum natus consequuntur
+                                possimus rerum molestias totam, praesentium ea. Molestias, totam?</p>
+                            <a href="" class="enlace">
+                                Leer mas
+                                <i class="fa-solid fa-long-arrow-alt-right"></i>
+
+                            </a>
+                        </article>
+                    </div>
+                </div>
+
+            </section>
+            </section>
+
+            <section id="aboutus">
+                <div class="container">
+                    <h2>About <span>Us</span></h2>
+                    <div class="underline">
+                        <hr noshade="noshade">
+                        <span>X</span>
+                    </div>
+
+                </div>
+            </section>
+
+
+
+        </main>
         <footer>
             <div class="container"></div>
             <p>
