--- a/index.html
+++ b/index.html
@@ -155,6 +155,26 @@
                         <span>X</span>
                     </div>
 
+                    <div class="flex">
+
+                        <div class="columna">
+                            <figure>
+                                <div class="marco">
+                                    <img src="./images/about-main.jpg" alt="nuestro chef">
+                                </div>
+                            </figure>
+                        </div>
+                        <div class="columna">
+                            <h3>The Hitory</h3>
+                            <h4>Our restaurant</h4>
+                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reprehenderit blanditiis ipsa
+                                eius? Modi qui unde tempore aliquam temporibus est placeat.</p>
+                            <div>
+                                <a href="#" class="boton">Leer mas <i class="fa-solid fa-long-arrow-alt-right"></i></a>
+                            </div>
+                        </div>
+                    </div>
+
                 </div>
             </section>
 
