--- a/blog.html
+++ b/blog.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hamburgueseria Rovers</title>
-    <link rel="stylesheet" href="css/style_index.css">
+    <title>Blog</title>
     <link rel="stylesheet" href="css/header.css">
+    <link rel="stylesheet" href="css/style_blog.css">
     <link rel="stylesheet" href="css/footer.css">
+
+
 </head>
 
 <body id="top">
@@ -59,129 +61,93 @@
 
                     </div>
                     <ul class="menu">
-                        <li><a class="activo" href="index.html">Home</a></li>
+                        <li><a href="index.html">Home</a></li>
                         <li><a href="menu.html">Menu</a></li>
-                        <li><a href="blog.html">Blog</a></li>
+                        <li><a class="activo" href="blog.html">Blog</a></li>
                         <li><a href="equipo.html">Equipo</a></li>
                     </ul>
 
                 </div>
             </nav>
         </header>
-        <div class="hero">
-            <div class="container">
-                <h1>Las mejores Hamburguesas del Mundo</h1>
-                <h2>Bienvenido a nuestra hamburgueseria</h2>
-                <p>Come tan solo por 15€</p>
-                <div>
-                    <a href="#" class="boton">Nuestra Carta <i class="fa-solid fa-long-arrow-alt-right"></i></a>
-                </div>
-                <ul class="social">
-                    <li>
-                        <a href="">
-                            <i class="fa-brands fa-facebook"></i>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="">
-                            <i class="fa-brands fa-twitter"></i>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="">
-                            <i class="fa-brands fa-instagram"></i>
-                        </a>
-                    </li>
-                </ul>
-            </div>
-        </div>
+
         <main>
-            <section id="ourservices">
+            <section id="Our_Blogs">
                 <div class="container">
-                    <h2>Our <span>Services</span></h2>
-                    <div class="underline">
-                        <hr noshade="noshade">
-                        <span>X</span>
-                    </div>
-                    <div class="grid">
-                        <article>
-                            <div>
-                                <i class="fa-solid fa-cogs"></i>
-                            </div>
-                            <h3>1. Carne 100% natural</h3>
-                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eligendi cum natus consequuntur
-                                possimus rerum molestias totam, praesentium ea. Molestias, totam?</p>
-                            <a href="" class="enlace">
-                                Leer mas
-                                <i class="fa-solid fa-long-arrow-alt-right"></i>
 
-                            </a>
-                        </article>
-                        <article>
-                            <div>
-                                <i class="fa-solid fa-truck"></i>
-                            </div>
-                            <h3>2. Cocina Moderna</h3>
-                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eligendi cum natus consequuntur
-                                possimus rerum molestias totam, praesentium ea. Molestias, totam?</p>
-                            <a href="" class="enlace">
-                                Leer mas
-                                <i class="fa-solid fa-long-arrow-alt-right"></i>
-
-                            </a>
-                        </article>
-                        <article>
-                            <div>
-                                <i class="fa-solid fa-heart"></i>
-                            </div>
-                            <h3>3. Servicio impecable</h3>
-                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eligendi cum natus consequuntur
-                                possimus rerum molestias totam, praesentium ea. Molestias, totam?</p>
-                            <a href="" class="enlace">
-                                Leer mas
-                                <i class="fa-solid fa-long-arrow-alt-right"></i>
-
-                            </a>
-                        </article>
-                    </div>
-                </div>
-
-            </section>
-            </section>
-
-            <section id="aboutus">
-                <div class="container">
-                    <h2>About <span>Us</span></h2>
+                    <h2>Our <span>Blogs</span></h2>
                     <div class="underline">
                         <hr noshade="noshade">
                         <span>X</span>
                     </div>
 
                     <div class="flex">
-
-                        <div class="columna">
-                            <figure>
-                                <div class="marco">
-                                    <img src="./images/about-main.jpg" alt="nuestro chef">
+                        <article>
+                            <div class="weekly">
+                                <img src="./images/news3.jpg" alt="">
+                                <div>
+                                    <h3>05</h3>
+                                    <h4>Mar</h4>
                                 </div>
-                            </figure>
-                        </div>
-                        <div class="columna">
-                            <h3>The Hitory</h3>
-                            <h4>Our restaurant</h4>
-                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reprehenderit blanditiis ipsa
-                                eius? Modi qui unde tempore aliquam temporibus est placeat.</p>
-                            <div>
-                                <a href="#" class="boton">Leer mas <i class="fa-solid fa-long-arrow-alt-right"></i></a>
                             </div>
-                        </div>
+                            <h3>Our Weekly Best Foods</h3>
+                            <h6>Posted by Rovers</h6>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus, saepe vero.
+                                Doloresminus
+                                perspiciatis laborum, sint rem earum! Numquam debitis,doloremque molestiae
+                                quaerat
+                                nostrum fugiat veritatis. Porro, inventore.</p>
+                            <a href="" class="enlace">
+                                Leer mas
+                                <i class="fa-solid fa-long-arrow-alt-right"></i>
+                            </a>
+                        </article>
+
+                        <article>
+                            <div class="weekly">
+                                <img src="./images/news4.jpg">
+                                <div>
+                                    <h3>17</h3>
+                                    <h4>Feb</h4>
+                                </div>
+                            </div>
+                            <h3>Top Five Reason To visit</h3>
+                            <h6>Posted by Rovers</h6>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus, saepe vero. Dolores
+                                minus
+                                perspiciatis laborum, sint rem earum! Numquam debitis at, harum doloremque molestiae
+                                quaerat
+                                nostrum fugiat veritatis. Porro, inventore.</p>
+                            <a href="" class="enlace">
+                                Leer mas
+                                <i class="fa-solid fa-long-arrow-alt-right"></i>
+                            </a>
+                        </article>
+                        <article>
+                            <div class="weekly">
+                                <img src="./images/news1.jpg" alt="">
+                                <div>
+                                    <h3>28</h3>
+                                    <h4>Feb</h4>
+                                </div>
+                            </div>
+                            <h3>Restaurant's Inside Design</h3>
+                            <h6>Posted by Rovers</h6>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus, saepe vero. Dolores
+                                minus
+                                perspiciatis laborum, sint rem earum! Numquam debitis at, harum doloremque molestiae
+                                quaerat
+                                nostrum fugiat veritatis. Porro, inventore.</p>
+                            <a href="" class="enlace">
+                                Leer mas
+                                <i class="fa-solid fa-long-arrow-alt-right"></i>
+                            </a>
+                        </article>
                     </div>
+
 
                 </div>
             </section>
-
-
-
         </main>
         <footer>
             <div class="container"></div>
@@ -192,7 +158,7 @@
             </p>
         </footer>
         <div class="arriba">
-            <a href="#top">
+            <a href="top">
                 <i class="fa-solid fa-square-caret-up"></i>
             </a>
         </div>
@@ -200,5 +166,7 @@
     </div>
 
 </body>
+
+
 
 </html>
