--- a/menu.html
+++ b/menu.html
@@ -96,37 +96,43 @@
                         </aside>
                         <section>
                             <article>
-                                <figure>
+                                <figure class="grid">
                                     <img src="./images/t1.jpg" alt="">
-                                    <h3>Chicken Burguer With Cheese and butter <span>$95</span></h3>
-                                    <p>Vegetable and Chicken burguer with extra butter</p>
-                                    <a href="" class="enlace">
-                                        Order Now
-                                        <i class="fa-solid fa-long-arrow-alt-right"></i>
-                                    </a>
+                                    <div>
+                                        <h3>Chicken Burguer With Cheese and butter <span>$95</span></h3>
+                                        <p>Vegetable and Chicken burguer with extra butter</p>
+                                        <a href="" class="enlace">
+                                            Order Now
+                                            <i class="fa-solid fa-long-arrow-alt-right"></i>
+                                        </a>
+                                    </div>
 
                                 </figure>
                             </article>
                             <article>
-                                <figure>
+                                <figure class="grid">
                                     <img src="./images/t4.jpg" alt="">
-                                    <h3>Coffee and Tea with Milk and Chocolate <span>$30</span></h3>
-                                    <p>Vegetable and Chicken burguer with extra butter</p>
-                                    <a href="" class="enlace">
-                                        Order Now
-                                        <i class="fa-solid fa-long-arrow-alt-right"></i>
-                                    </a>
+                                    <div>
+                                        <h3>Coffee and Tea with Milk and Chocolate <span>$30</span></h3>
+                                        <p>Vegetable and Chicken burguer with extra butter</p>
+                                        <a href="" class="enlace">
+                                            Order Now
+                                            <i class="fa-solid fa-long-arrow-alt-right"></i>
+                                        </a>
+                                    </div>
                                 </figure>
                             </article>
                             <article>
-                                <figure>
+                                <figure class="grid">
                                     <img src="./images/t3.jpg" alt="">
-                                    <h3>Hot Pizza With Extra Cheese and Butter <span>$65</span></h3>
-                                    <p>Vegetable and Chicken burguer with extra butter</p>
-                                    <a href="" class="enlace">
-                                        Order Now
-                                        <i class="fa-solid fa-long-arrow-alt-right"></i>
-                                    </a>
+                                    <div>
+                                        <h3>Hot Pizza With Extra Cheese and Butter <span>$65</span></h3>
+                                        <p>Vegetable and Chicken burguer with extra butter</p>
+                                        <a href="" class="enlace">
+                                            Order Now
+                                            <i class="fa-solid fa-long-arrow-alt-right"></i>
+                                        </a>
+                                    </div>
 
                                 </figure>
                             </article>
